# video-sop

./: .gitignore  README.md  llms.txt  pyproject.toml  run_all.sh
screenshare_to_text/: __init__.py  analyze_frames.py  create_journey.py  extract_frames.py  generate_summary.py
