[tool.poetry]
name = "screenshare-ro-text"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
litellm = "^1.74.1"
opencv-python = "^4.9.0"
yarl = "^1.9.4"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
certifi = "^2024.2.2"
httpx = "^0.27.0"
sniffio = "^1.3.1"
idna = "^3.7"
httpcore = "^1.0.5"
h11 = "^0.14.0"
aiohttp = "^3.9.5"
multidict = "^6.0.5"
attrs = "^23.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
